# sublime-text-gleam

./: .gitattributes  .gitignore  .tool-versions  .yamlfix.toml  CONTRIBUTING.md  README.md  poetry.toml  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
examples/: README.md
messages/: 0.2.0.txt
package/: Gleam.sbnf  Gleam.sublime-syntax  Gleam.tmPreferences
scripts/: review  yamlcheck  yamlfix
syntaxes/: Gleam.sublime-syntax
tests/: README.md  gleam.toml  manifest.toml
tests/bad/: syntax_test_import.gleam  syntax_test_invalid.gleam  syntax_test_misc.gleam
tests/src/advanced/: syntax_test_crashes.gleam  syntax_test_externals.gleam  syntax_test_use.gleam
tests/src/basics/: syntax_test_assignment.gleam  syntax_test_blocks.gleam  syntax_test_constants.gleam  syntax_test_keywords.gleam  syntax_test_lists.gleam  syntax_test_numbers.gleam  syntax_test_operators.gleam  syntax_test_strings.gleam  syntax_test_types.gleam
tests/src/data_types/: syntax_test_accessors.gleam  syntax_test_bit_arrays.gleam  syntax_test_records.gleam  syntax_test_tuples.gleam  syntax_test_updates.gleam  syntax_test_variants.gleam
tests/src/flow_control/: syntax_test_case.gleam  syntax_test_multi.gleam
tests/src/functions/: syntax_test_comments.gleam  syntax_test_deprecated_fn.gleam  syntax_test_functions.gleam  syntax_test_generic_fn.gleam  syntax_test_labelled_args.gleam  syntax_test_pipeline.gleam
