[tool.poetry]
name = "sublime-text-gleam"
version = "0.0.1"
description = ""
authors = ["Cora Grant"]

[tool.poetry.dependencies]
python = "^3.8"
st-package-reviewer = "^0.3.0"
yamlfix = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yamlfix]
none_representation = "null"
section_whitelines = 1
sequence_style = "block_style"
