[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sublime-text-gleam"
version = "0.0.1"
description = ""
authors = [{name = "Cora Grant"}]
requires-python = ">=3.13,<4.0"
dependencies = [
  "st-package-reviewer (~=0.3.0)",
  "yamlfix (~=1.19.0)",
]

[tool.poetry]
package-mode = false

[tool.yamlfix]
none_representation = "null"
section_whitelines = 1
sequence_style = "block_style"
